# gn

./: BUILD.gn  action_target_generator.cc  build_settings.cc  build_settings.h  config.cc  function_exec_script.cc  function_rebase_path.cc  input_file_manager.cc  scope_per_file_provider.cc  scope_per_file_provider.h  setup.cc  value_extractors.cc
docs/: reference.md
src/: last_commit_position.h
src/gn/: action_target_generator.cc  build_settings.cc  build_settings.h  command_desc.cc  config.cc  function_exec_script.cc  function_read_file.cc  function_rebase_path.cc  function_toolchain.cc  functions.cc  input_file_manager.cc  ninja_binary_target_writer.cc  scope_per_file_provider.cc  scope_per_file_provider.h  setup.cc  value_extractors.cc  variables.cc
